change password method, Refactor + Tests